Got rid of deprecated method usage when creating primitive objects